<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.iesch.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="org.iesch.myapplication.ui.ranking.RankingFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_location"
        android:name="org.iesch.myapplication.ui.location.LocationFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_pistas"
        android:name="org.iesch.myapplication.ui.padel.LugaresDeportivosFragment"
        android:label="Padel"
        tools:layout="@layout/fragment_lugares_deportivos" />
    
</navigation>