<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c6"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/padeltour2"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/OutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/EmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/c1"
            android:textColor="@color/c1"
            android:inputType="textEmailAddress"
            android:ems="10"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/ContrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:textColorHint="@color/c1"
            android:textColor="@color/c1"
            android:inputType="textPassword"
            android:ems="10"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/RegistrarButton"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textColor="@color/white"
                android:backgroundTint="@color/c1"/>

            <Space
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/AccederButton"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceder"
                android:textColor="@color/white"
                android:backgroundTint="@color/c1"/>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/GoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingStart="16dp"
            android:text="@string/login_con_google"
            android:textColor="@color/c1"
            android:drawableLeft="@drawable/google"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>