<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c6"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloTextView"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/rural_sport"
                android:textColor="@color/c1"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titulo2TextView"
                style="@style/TextAppearance.Material3.ActionBar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/app_de_actividades_deportivas"
                android:textColor="@color/c2"
                android:textSize="18dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/fondopadel1_1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/c1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="210dp"
            android:src="@drawable/fondopadel2_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo1"
                android:gravity="bottom"
                android:layout_margin="10dp"
                android:textColor="@color/c1"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info3TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texto1"
                android:gravity="start"
                android:layout_margin="10dp"
                android:textColor="@color/c2"
                android:textSize="14dp" />


        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/c1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="210dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info4TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/titulo2"
                android:textColor="@color/c1"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info5TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/texto2"
                android:textColor="@color/c2"
                android:textSize="14dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/fondopadel3_1" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c1"/>




</LinearLayout>